# calendario

./: .env.example  .gitignore  README.md  especificaciones_agente.md  main.py  pyproject.toml  requirements.txt
.opencode/: SKILL.md  SKILLS.md  instructions.md
agents/calendar_sync/: __init__.py  auth.py  client.py  colors.py  conflict_checker.py  event_builder.py  formatter.py
agents/db_manager/: cache.py  connection.py  migrations.py  models.py  repository.py
agents/groq_parser/: __init__.py  client.py  parser.py  prompts.py  schemas.py
agents/telegram_listener/: commands.py  filters.py  handler.py  keyboards.py
config/: constants.py  settings.py
core/: exceptions.py  logger.py  orchestrator.py  work_schedule.py
skills/config-observability/: SKILL.md
skills/google-calendar/: SKILL.md
skills/llm-parser/: SKILL.md
skills/orchestrator/: SKILL.md
skills/sqlite-database/: SKILL.md
skills/telegram-bot/: SKILL.md
specs/: README.md  diagram.md
specs/post-mvp/: backlog.md
specs/sprint-1/: config-core.md  database-setup.md  spec.md
specs/sprint-2/: llm-parser.md  spec.md
specs/sprint-3/: google-calendar.md  spec.md
specs/sprint-4/: spec.md  telegram-bot.md
specs/sprint-5/: orchestrator.md  spec.md
src/: config.py  main.py
src/bot/: app.py  constants.py  formatters.py  keyboards.py  middleware.py
src/core/: exceptions.py
src/db/: models.py  repository.py  schema.sql
src/llm/: client.py  parser.py  prompts.py  schemas.py
tests/: conftest.py  test_config_and_core.py  test_orchestrator.py  test_work_schedule.py
(+58 files in other folders)
